# AutoFeatureGenie

./: .gitignore  CHANGELOG.md  HOW_TO_TEST.md  IMPLEMENTATION_EXAMPLES.md  IMPROVEMENTS.md  PROJECT_ANALYSIS_SUMMARY.md  QUICK_START.md  QUICK_START_IMPROVEMENTS.md  README.md  SETUP.md  TESTING_GUIDE.md  check_gemini_models.py  pyproject.toml  pytest.ini  requirements.txt  test_quick.py  vectorstore.pkl
.github/workflows/: ci.yml
backend/: build_rag_index.py  feature_engine.py  main.py  prompts.py  rag_engine.py  vectorstore.pkl
data/: autofeaturegenie.db  stock_market_june2025.csv  test_upload.csv  train.csv  youtube_data.csv
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
domain_docs/: telecom_guide.txt
frontend/: app.py  index.html
frontend/css/: style.css
frontend/js/: app.js
src/: __init__.py
src/api/routes/: __init__.py  features.py  health.py  upload.py
src/config/: settings.py
src/database/: database.py  models.py
src/middleware/: __init__.py  rate_limit.py
src/models/: __init__.py  schemas.py
src/services/: evaluation_service.py
src/utils/: __init__.py  exceptions.py  logger.py
src/worker/: celery_app.py  tasks.py
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_evaluation_service.py  test_feature_engine.py
