[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-feature-genie"
version = "1.0.0"
description = "AI-powered automated feature engineering application."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core API & Config
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    
    # Data processing & ML
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # Serving static files
    "aiofiles>=23.0.0",
    
    # AI & LangChain Ecosystem
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    
    # Async & Task Queue
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # Utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # handled by black
exclude = [".git", "__pycache__", "afenv", ".venv", "build"]

[tool.ruff.isort]
known-first-party = ["backend", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=backend --cov=src --cov-report=term-missing --cov-report=html"
